--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ body{
     height: 100vh;
     position: relative;
     overflow-x: hidden;
+    background-image: url(../assets/bg-image.svg);
+    background-size: cover;
 }
 
 .page-content{
